Nand2Tetris/assembler4/assembler2/bin/_build/_log
### Starting build.
# Target: main.ml.depends, tags: { extension:ml, file:main.ml, ocaml, ocamldep, quiet }
/home/hkashgun/.opam/4.14.0/bin/ocamldep.opt -modules main.ml > main.ml.depends
# Target: main.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:main.cmo, file:main.ml, implem, ocaml, quiet }
/home/hkashgun/.opam/4.14.0/bin/ocamlc.opt -c -o main.cmo main.ml
+ /home/hkashgun/.opam/4.14.0/bin/ocamlc.opt -c -o main.cmo main.ml
File "main.ml", line 2, characters 5-21:
2 | open Assembler.Parser
         ^^^^^^^^^^^^^^^^
Error: Unbound module Assembler
Command exited with code 2.
# Compilation unsuccessful.
